# learning

./: 1  1.c  1.d  1.patch  2  README.md  a.out  docker_install.sh  email  get_oracle_jdk_linux_x64.sh  git_commit_template.txt  kpatch_run.sh  muttrc  open.c  open_dev.c  sam  test.js  write.c
CIT/: create.sh  interfaces  start.sh  vtpm_init.sh
Glibc/: version.c
IMA_EVM/: .ima_appraisal_call.log.swp  01label_fs.sh  02evm_key_generate.sh  03evm_load_keys.sh  04add_two_files_1.sh  05add_two_files_sh.sh  06_add_ima_sh_02.sh  07update_initrams.sh  getsid  getsid.c  masterkey  sign.sh
algorithm/: a.out  core  correct_bst.c
assembly/: a.out  clock_nanosleep.c  clock_nanosleep.s  core  cpuid.c  sleep
batch_modify/: intel_chmod07.c
c_plus_plus/: function_template.cpp  reference-return.cpp  reference.cpp  vector.cpp
evm_install/: enable_evm.sh  evm  ima.sh  ima_02.sh
libashmem/: configure.in
modules/: .char_driver.ko.cmd  .char_driver.mod.o.cmd  .char_driver.o.cmd  .default.ko.cmd  .default.mod.o.cmd  .default.o.cmd  .init.ko.cmd  .init.mod.o.cmd  .init.o.cmd  .sam_rm.ko.cmd  .sam_rm.mod.o.cmd  .sam_rm.o.cmd  Makefile  char_driver.c  char_driver.ko  char_driver.mod.c  default.c  init.c  (+9 more)
oop_ansi_c/project/: Makefile.am  Makefile.in  configure  configure.ac
oop_ansi_c/project/autom4te.cache/: output.6  requests  traces.1  traces.6
oop_ansi_c/project/include/: animal.h  llist.h  option.h  stack.h  tree.h
oop_ansi_c/project/lib/: Makefile.am  Makefile.in  cat.c  dog.c  llist.c  set.c  stack.c  tree.c
oop_ansi_c/project/src/: Makefile.am  Makefile.in  main.c
(+409 files in other folders)
