#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(oop,1.0, samyankun@gmail.com)

AC_CONFIG_AUX_DIR(config)

AC_CONFIG_SRCDIR(src/main.c)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_LN_S

AC_CONFIG_MACRO_DIR([m4])
LT_PREREQ(2.2)
LT_INIT([disable-static])
# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile lib/Makefile src/Makefile  )
